<resources>
    <string name="app_name">BrainboxTest</string>
    <string name="action_settings">Settings</string>
    <string name="_50">1</string>
    <string name="_51">2</string>
    <string name="_52">3</string>
    <string name="brainbox_test">Firework Show!</string>
    <string name="connect">connect</string>
    <string name="title_activity_box1">Box1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_16">16</string>
    <string name="_11">11</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_13">13</string>
    <string name="brainbox_1">Brainbox 1</string>
    <string name="back">Back</string>
    <string name="title_activity_box2">box2</string>
    <string name="brainbox_2">Brainbox 2</string>
    <string name="title_activity_box3">box3</string>
    <string name="brainbox_3">brainbox 3</string>
    <string name="title_activity_box4">box4</string>
    <string name="brainbox_4">brainbox 4</string>
    <string name="title_activity_box5">box5</string>
    <string name="brainbox_5">brainbox 5</string>
    <string name="title_activity_box6">box6</string>
    <string name="brainbox_6">brainbox 6</string>
    <string name="title_activity_box7">box7</string>
    <string name="brainbox_7">brainbox 7</string>
    <string name="title_activity_box8">box8</string>
    <string name="brainbox_8">brainbox 8</string>
    <string name="title_activity_box9">box9</string>
    <string name="brainbox_9">brainbox 9</string>
    <string name="title_activity_box10">box10</string>
    <string name="brainbox_10">brainbox 10</string>
    <string name="title_activity_box11">box11</string>
    <string name="brainbox_11">brainbox 11</string>
    <string name="title_activity_box12">box12</string>
    <string name="brainbox_12">brainbox 12</string>
</resources>
